# miniagda

./: Cargo.toml  README.md
binaries/miniagda-exec/: Cargo.toml
binaries/miniagda-exec/src/: main.rs
binaries/miniagda-watch/: Cargo.toml
binaries/miniagda-watch/src/: main.rs
crates/miniagda-watch/src/: main.rs
crates/miniagda/src/diagnostics/: error.rs  mod.rs  span.rs
crates/miniagda/src/elaboration/: data.rs
crates/miniagda/src/syntax/: core.rs  mod.rs  surface.rs
examples/: foo.agda  min.agda
miniagda/: Cargo.toml
miniagda/src/: lib.rs
miniagda/src/diagnostics/: error.rs  mod.rs  span.rs
miniagda/src/elaboration/: data.rs  eval.rs  func.rs  mod.rs  state.rs
miniagda/src/parsing/: lex.rs  mod.rs  parse.rs
miniagda/src/syntax/: core.rs  mod.rs  surf.rs
scripts/: format  install  watch
